Fixed spacing css issue in mobile

--- a/src/css/product.css
+++ b/src/css/product.css
@@ -141,11 +141,9 @@
   }
   .left-right-section .leftrightimgcontent-wrapper, .bottomleftright-testimonial .leftrightbottom-testimonial-wrapper{
     flex-direction: column-reverse !important;
-    row-gap: 60px;
   }
   .left-right-section .leftrightimgcontent-wrapper-col{
     flex-direction: column !important;
-    row-gap: 60px;
   }
   .left-right-section .leftrightimgcontent-items{
     width: 100% !important;
